--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Simple Game of Life Implementation with React."
     />
 
     <!-- Bootstrap import -->
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Game of Life</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
